funtional initial template

--- a/Src/Initialization/PeopleRegistration.Service/appsettings.json
+++ b/Src/Initialization/PeopleRegistration.Service/appsettings.json
@@ -1,11 +1,12 @@
 {
   "AppSettings": {
     "Environment": "Local",
-    "DatabaseName": "",
-    "SinkCollectionName": ""
+    "DatabaseName": "CrudMongo",
+    "CollectionName": "RegistrationOfPersons",
+    "ConnectionStringMongo": "mongodb+srv://martincortes:1033655662Mch@cluster0.rxxyqhm.mongodb.net/"
   },
   "MongoConfigurationProvider": {
-    "CollectionName": "ConfiguracionInicio",
+    "CollectionName": "InitialConfiguration",
     "ReloadOnChange": true
   },
   "Serilog": {
