--- a/Src/Infrastructure/Infrastructure.csproj
+++ b/Src/Infrastructure/Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" />
     <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="MongoDB.Driver" />
+    <PackageReference Include="MongoDB.Driver.Core" />
   </ItemGroup>
 
   <ItemGroup>
