--- a/Src/Initialization/PeopleRegistration.Service/appsettings.json
+++ b/Src/Initialization/PeopleRegistration.Service/appsettings.json
@@ -3,7 +3,7 @@
     "Environment": "Local",
     "DatabaseName": "CrudMongo",
     "CollectionName": "RegistrationOfPersons",
-    "ConnectionStringMongo": ""
+    "ConnectionStringMongo": "mongodb+srv://martincortes:1033655662Mch@cluster0.rxxyqhm.mongodb.net/"
   },
   "MongoConfigurationProvider": {
     "CollectionName": "InitialConfiguration",
